infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  # number of pods you want to run
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  # template of each pod to be created
  template:
    metadata:
      labels:
        app: auth-mongo
    # tell the pod how to behave
    spec:
      containers:
        - name: auth-mongo
          image: mongo

---
# Cluster IP service for pods created by deployments
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-cluster-ip-srv
# what pods to find and its governance
spec:
  type: ClusterIP
  # pods to get access to
  selector:
    app: auth-mongo
  ports:
    - name: db
      port: 27017
      targetPort: 27017
      protocol: TCP
