infra/k8s/auth.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  # number of pods you want to run
  replicas: 1
  selector:
    matchLabels:
      app: auth
  # template of each pod to be created
  template:
    metadata:
      labels:
        app: auth
    # tell the pod how to behave
    spec:
      containers:
        - name: auth
          image: kenoseni/auth

---
# Cluster IP service for pods created by deployments
apiVersion: v1
kind: Service
metadata:
  name: auth-cluster-ip-srv
# what pods to find and its governance
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
  - name:  auth
    port:  3000
    targetPort: 3000
    protocol: TCP
