infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  # number of pods you want to run
  replicas: 1
  selector:
    matchLabels:
      app: client
  # template of each pod to be created
  template:
    metadata:
      labels:
        app: client
    # tell the pod how to behave
    spec:
      containers:
        - name: client
          # local image: kenoseni/client
          image: gcr.io/ticketing-dev-338003/client

---
# Cluster IP service for pods created by deployments
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-srv
# what pods to find and its governance
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - name: client
      # port for the node port service
      port: 3000
      # port for the app running in a container found in a Pod
      targetPort: 3000
      protocol: TCP
