infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  # number of pods you want to run
  replicas: 1
  selector:
    matchLabels:
      app: nats
  # template of each pod to be created
  template:
    metadata:
      labels:
        app: nats
    # tell the pod how to behave
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.24.3
          args:
            [
              "-p",
              "4222",
              "-m",
              "8222",
              "-hbi",
              "5s",
              "-hbt",
              "5s",
              "-hbf",
              "2",
              "-SD",
              "-cid",
              "ticketing",
            ]
---
# Cluster IP service for pods created by deployments
apiVersion: v1
kind: Service
metadata:
  name: nats-cluster-ip-srv
# what pods to find and its governance
spec:
  type: ClusterIP
  selector:
    app: nats
  ports:
    - name: client
      port: 4222
      targetPort: 4222
      protocol: TCP
    - name: monitoring
      port: 8222
      targetPort: 8222
      protocol: TCP
