infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  # number of pods you want to run
  replicas: 1
  selector:
    matchLabels:
      app: orders
  # template of each pod to be created
  template:
    metadata:
      labels:
        app: orders
    # tell the pod how to behave
    spec:
      containers:
        - name: orders
          # local image: kenoseni/orders
          image: gcr.io/ticketing-dev-338003/orders
---
# Cluster IP service for pods created by deployments
apiVersion: v1
kind: Service
metadata:
  name: orders-cluster-ip-srv
# what pods to find and its governance
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
    - name: orders
      port: 3000
      targetPort: 3000
      protocol: TCP
