infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  # number of pods you want to run
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  # template of each pod to be created
  template:
    metadata:
      labels:
        app: tickets
    # tell the pod how to behave
    spec:
      containers:
        - name: tickets
          # local image: kenoseni/tickets
          image: gcr.io/ticketing-dev-338003/tickets
---
# Cluster IP service for pods created by deployments
apiVersion: v1
kind: Service
metadata:
  name: tickets-cluster-ip-srv
# what pods to find and its governance
spec:
  type: ClusterIP
  selector:
    app: tickets
  ports:
    - name: tickets
      port: 3000
      targetPort: 3000
      protocol: TCP
